@@ -51,6 +51,7 @@ CHANGELOG Roundcube Webmail
 - Fix touch event issue on messages list in IE/Edge (#5781)
 - Fix so links over images are not removed in plain text signatures converted from HTML (#4473)
 - Fix various issues when downloading files with names containing non-ascii chars, use RFC 2231 (#5772)
+- Fix broken long filenames when using imap4d server - workaround server bug (#6048)
 
 RELEASE 1.3.3
 -------------
